Added HTTPS in constants file as Base URL.

--- a/HelpingHarper/Base.lproj/Main.storyboard
+++ b/HelpingHarper/Base.lproj/Main.storyboard
@@ -613,7 +613,7 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="134.5" height="50"/>
                                                 <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="20"/>
-                                                <state key="normal" title="Pause"/>
+                                                <state key="normal" title="Exit"/>
                                                 <userDefinedRuntimeAttributes>
                                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                         <real key="value" value="15"/>
