--- a/HelpingHarper/Base.lproj/Main.storyboard
+++ b/HelpingHarper/Base.lproj/Main.storyboard
@@ -603,6 +603,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JGN-Zh-85o">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Fbt-Do-9P9">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                </view>
+                                <vibrancyEffect>
+                                    <blurEffect style="regular"/>
+                                </vibrancyEffect>
+                            </visualEffectView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="D08-YG-arT" userLabel="all">
                                 <rect key="frame" x="14.5" y="20" width="385" height="768"/>
                                 <subviews>
@@ -800,11 +810,15 @@
                         <color key="backgroundColor" red="0.90816897149999998" green="0.82639545199999997" blue="0.70193976160000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <gestureRecognizers/>
                         <constraints>
+                            <constraint firstAttribute="bottom" secondItem="JGN-Zh-85o" secondAttribute="bottom" id="07r-3L-CLz"/>
                             <constraint firstItem="D08-YG-arT" firstAttribute="centerY" secondItem="dZd-HC-T67" secondAttribute="centerY" id="JAw-7p-x6J"/>
                             <constraint firstItem="D08-YG-arT" firstAttribute="height" secondItem="dZd-HC-T67" secondAttribute="height" multiplier="0.95" id="UMV-jK-vxy"/>
+                            <constraint firstItem="JGN-Zh-85o" firstAttribute="leading" secondItem="dZd-HC-T67" secondAttribute="leading" id="d7I-tq-TVF"/>
                             <constraint firstItem="D08-YG-arT" firstAttribute="centerX" secondItem="dZd-HC-T67" secondAttribute="centerX" id="hOL-z0-Khz"/>
                             <constraint firstItem="D08-YG-arT" firstAttribute="width" secondItem="dZd-HC-T67" secondAttribute="width" multiplier="0.93" id="iTL-nV-WEL"/>
                             <constraint firstItem="D08-YG-arT" firstAttribute="height" secondItem="dZd-HC-T67" secondAttribute="height" multiplier="0.95" id="jEA-mc-hVe"/>
+                            <constraint firstItem="dZd-HC-T67" firstAttribute="trailing" secondItem="JGN-Zh-85o" secondAttribute="trailing" id="ocL-H8-Rzl"/>
+                            <constraint firstItem="JGN-Zh-85o" firstAttribute="top" secondItem="cWP-gX-JGG" secondAttribute="top" id="xri-eM-XzO"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="dZd-HC-T67"/>
                         <variation key="default">
